// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sequence functions sort samples 1`] = `
Array [
  false,
  true,
  -100,
  1,
  2,
  "Albert",
  "albert",
  Array [],
  Array [
    0,
    1,
    2,
  ],
  Array [
    1,
    2,
    3,
  ],
  Array [
    0,
    0,
    0,
    0,
  ],
  Object {},
  Object {
    "a": 1,
  },
  Object {
    "d": undefined,
    "f": "",
    "s": "ABC",
    "Ʀ": true,
  },
  Object {
    "d": undefined,
    "f": "",
    "s": "abc",
    "Ʀ": true,
  },
  null,
]
`;

exports[`sequence functions sort samples 2`] = `
Array [
  false,
  true,
  -100,
  1,
  2,
  "Albert",
  "albert",
  Array [],
  Array [
    0,
    1,
    2,
  ],
  Array [
    1,
    2,
    3,
  ],
  Array [
    0,
    0,
    0,
    0,
  ],
  Object {},
  Object {
    "a": 1,
  },
  Object {
    "d": Object {
      "code": "(sort [1 true 2 false  -100 nil (regexp \\"abc\\") (regexp \\"ABC\\") [] [1 2 3] [0 1 2] [0 0 0 0] {:a 1} {} \\"Albert\\" \\"albert\\"])",
      "column": 49,
      "getLocation": undefined,
      "line": 1,
    },
    "f": "",
    "s": "ABC",
    "Ʀ": true,
  },
  Object {
    "d": Object {
      "code": "(sort [1 true 2 false  -100 nil (regexp \\"abc\\") (regexp \\"ABC\\") [] [1 2 3] [0 1 2] [0 0 0 0] {:a 1} {} \\"Albert\\" \\"albert\\"])",
      "column": 34,
      "getLocation": undefined,
      "line": 1,
    },
    "f": "",
    "s": "abc",
    "Ʀ": true,
  },
  null,
]
`;
